Signed-off-by: thanhthuat.github.io <phamthanhthuat2006@gmail.com>

--- a/hoaca.html
+++ b/hoaca.html
@@ -469,29 +469,29 @@
 <body>
 <div id="hoca">
     
-    <img id="ca1" src="..//hoca/image/ca1.png" alt="ca1">
-    <img id="ca2" src="..//hoca/image/ca2.png" alt="ca2">
-    <img id="ca3" src="..//hoca/image/ca3.png" alt="ca3">
-    <img id="ca4" src="..//hoca/image/ca4.png" alt="ca4">
+    <img id="ca1" src="../image/ca1.png" alt="ca1">
+    <img id="ca2" src="../image/ca2.png" alt="ca2">
+    <img id="ca3" src="../image/ca3.png" alt="ca3">
+    <img id="ca4" src="../image/ca4.png" alt="ca4">
     <img id="ca5" src="../hoca/image/ca5.png" alt="ca5">
     <img id="ca6" src="../hoca/image/ca6.png" alt="ca6">
-    <img id="ca7" src="..//hoca/image/ca7.png" alt="ca7">
-    <img id="cua" src="..//hoca/image/cua.png" alt="cua">
-    <img id="cua1" src="..//hoca/image/cua.png" alt="cua1">
-    <img id="sanho1" src="..//hoca/image/sanho.png" alt="sanho1">
+    <img id="ca7" src="../image/ca7.png" alt="ca7">
+    <img id="cua" src="../image/cua.png" alt="cua">
+    <img id="cua1" src="../image/cua.png" alt="cua1">
+    <img id="sanho1" src="../image/sanho.png" alt="sanho1">
     <img id="sanho2" src="../hoca/image/sanh2.png" alt="sanho2">
     <img id="sanho3" src="../hoca/image/sanh2.png" alt="sanho3">
     <img id="sanho4" src="../hoca/image/sanh2.png" alt="sanho4">
     <img id="sanho5" src="../hoca/image/sanh2.png" alt="sanho5">
     <img id="sanho6" src="../hoca/image/sanh2.png" alt="sanho6">
-    <img id="sanho7" src="..//hoca/image/sanho.png" alt="sanho7">
-    <img id="nuoc" src="..//hoca/image/nuoc.png" alt="nuoc">
-    <img id="sua" src="..//hoca/image/sua1.png" alt="sua">
-    <img id="sua1" src="..//hoca/image/sua1.png" alt="sua1">
-    <img id="sua2" src="..//hoca/image/sua2.png" alt="sua2">
-    <img id="sua3" src="..//hoca/image/sua2.png" alt="sua3">
-    <img id="sua5" src="..//hoca/image/sua3.png" alt="sua5">
-    <img id="sua6" src="..//hoca/image/sua3.png" alt="sua6">
+    <img id="sanho7" src="../image/sanho.png" alt="sanho7">
+    <img id="nuoc" src="../image/nuoc.png" alt="nuoc">
+    <img id="sua" src="../image/sua1.png" alt="sua">
+    <img id="sua1" src="../image/sua1.png" alt="sua1">
+    <img id="sua2" src="../image/sua2.png" alt="sua2">
+    <img id="sua3" src="../image/sua2.png" alt="sua3">
+    <img id="sua5" src="../image/sua3.png" alt="sua5">
+    <img id="sua6" src="../image/sua3.png" alt="sua6">
     <img id="rua"  src=".//image/rua.png"  alt="rua"
 </div>
 </body>
