--- a/hoaca.html
+++ b/hoaca.html
@@ -473,17 +473,17 @@
     <img id="ca2" src="../image/ca2.png" alt="ca2">
     <img id="ca3" src="../image/ca3.png" alt="ca3">
     <img id="ca4" src="../image/ca4.png" alt="ca4">
-    <img id="ca5" src="../hoca/image/ca5.png" alt="ca5">
-    <img id="ca6" src="../hoca/image/ca6.png" alt="ca6">
+    <img id="ca5" src="../image/ca5.png" alt="ca5">
+    <img id="ca6" src="..//image/ca6.png" alt="ca6">
     <img id="ca7" src="../image/ca7.png" alt="ca7">
     <img id="cua" src="../image/cua.png" alt="cua">
     <img id="cua1" src="../image/cua.png" alt="cua1">
     <img id="sanho1" src="../image/sanho.png" alt="sanho1">
-    <img id="sanho2" src="../hoca/image/sanh2.png" alt="sanho2">
-    <img id="sanho3" src="../hoca/image/sanh2.png" alt="sanho3">
-    <img id="sanho4" src="../hoca/image/sanh2.png" alt="sanho4">
-    <img id="sanho5" src="../hoca/image/sanh2.png" alt="sanho5">
-    <img id="sanho6" src="../hoca/image/sanh2.png" alt="sanho6">
+    <img id="sanho2" src="../image/sanh2.png" alt="sanho2">
+    <img id="sanho3" src="../image/sanh2.png" alt="sanho3">
+    <img id="sanho4" src="../image/sanh2.png" alt="sanho4">
+    <img id="sanho5" src="../image/sanh2.png" alt="sanho5">
+    <img id="sanho6" src="../image/sanh2.png" alt="sanho6">
     <img id="sanho7" src="../image/sanho.png" alt="sanho7">
     <img id="nuoc" src="../image/nuoc.png" alt="nuoc">
     <img id="sua" src="../image/sua1.png" alt="sua">
