--- a/hoaca.html
+++ b/hoaca.html
@@ -492,7 +492,7 @@
     <img id="sua3" src="../image/sua2.png" alt="sua3">
     <img id="sua5" src="../image/sua3.png" alt="sua5">
     <img id="sua6" src="../image/sua3.png" alt="sua6">
-    <img id="rua"  src=".//image/rua.png"  alt="rua"
+    <img id="rua"  src="./rua.png"  alt="rua"
 </div>
 </body>
 
